<resources>
    <string name="app_name">Budget King</string>
    <string name="default_web_client_id">886705443129-1kbci3f2k4765dv4j480a5s9r5vhu8n8.apps.googleusercontent.com</string>

    <!-- Fragments -->
    <string name="item_inicio">Inicio</string>
    <string name="item_gasto">Gasto</string>
    <string name="item_presupuesto">Presupuesto</string>
    <string name="item_resumen">Resumen</string>
    <string name="item_perfil">Perfil</string>
    <string name="tv_titulo">Titulos</string>

    <!-- MainActivity -->
    <string name="titulo">CashControl</string>
    <string name="descripcion">CashControl te ayuda a registrar y gestionar tus gastos diarios de forma sencilla y rápida. Visualiza tus ingresos, categoriza tus gastos y descubre patrones para ahorrar más.</string>
    <string name="btn_empezar">Iniciar Sesion</string>
    <string name="btn_registrarse">Registrarse</string>

    <!-- LoginActivity -->
    <string name="titulo_login">Inicio de sesión</string>
    <string name="correo_login">Correo electronico</string>
    <string name="password_login">Contraseña</string>
    <string name="btn_login">Iniciar</string>
    <string name="btn_login_google">Iniciar con Google</string>
    <string name="sin_cuenta"><u>¿No tienes una cuenta? Registrate</u></string>

    <!-- RegisterActivity -->
    <string name="registro">Registro</string>
    <string name="r_nombre">Nombre</string>
    <string name="r_correo">Correo</string>
    <string name="r_password">Contraseña</string>
    <string name="r_r_password">Repita la contraseña</string>
    <string name="r_google"><u>Registrarse con Google</u></string>

    <!-- PresupuestoActivity -->
    <string name="t_presupuesto">Establecer presupuesto</string>
    <string name="st_presupuesto">Define un presupuesto para controlar tus gastos</string>
    <string name="t_monto_presupuesto">Monto del Presupuesto ($)</string>
    <string name="t_periodo">Periodo</string>
    <string name="t_fecha">Fecha de inicio</string>
    <string name="btn_presupuesto">Agregar presupuesto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_perfilUsuario">Perfil de usuario</string>
    <string name="tv_userName">User</string>
    <string name="tv_userEmail">user@gmail.com</string>
    <string name="tv_cerrarSesion">Cerrar Sesion</string>
    <string name="profile_picture">imagen de perfil</string>
    <string name="txt_nivel_usuario">nivel de usuario</string>
    <string name="txt_usuario_correo">usuario@correo</string>

    <!-- id fragment Presupuesto -->


</resources>